Fixed ticket type bugs
