# src/Admitto.Module.Registrations/Application/UseCases/TicketTypeManagement/AddTicketType/AddTicketTypeCommand.cs
@@ -9,4 +9,5 @@ internal sealed record AddTicketTypeCommand(
     Slug Slug,
     DisplayName Name,
     string[] TimeSlots,
-    int? MaxCapacity) : Command;
+    int? MaxCapacity,
+    bool SelfServiceEnabled = true) : Command;
