# src/Admitto.Module.Registrations/Application/UseCases/TicketTypeManagement/GetTicketTypes/TicketTypeDto.cs
@@ -6,4 +6,5 @@ internal sealed record TicketTypeDto(
     string[] TimeSlots,
     int? MaxCapacity,
     int UsedCapacity,
-    bool IsCancelled);
+    bool IsCancelled,
+    bool SelfServiceEnabled);
